--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,14 @@
             <version>5.12.0</version>
         </dependency>
     </dependencies>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.5.3</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
